# python-proj

./: .gitignore  README.md
ai/: pyproject.toml
ai/ai/: logging_setup.py
ai/ai/ch08/: hello_chat_model.py
ai/ai/ch11/: hello_vector_store.py  rag_bot.py  story.txt
ai/ai/ch_09/: chat_bot_with_history.py
ai/ai/huggingface/entry/: sentiment_analysis_sample.py
ai/ai/intro/ch08/: hello_chat_model.py
ai/ai/intro/ch11/: hello_vector_store.py  rag_bot.py
ai/ai/intro/ch_09/: hello_chat_bot.py
ai/ai/intro/tool/: chat_models.py
fastapi-demo/: pyproject.toml
fastapi-demo/cicd/: Dockerfile  Dockerfile-base
fastapi-demo/fastapi_demo/: __init__.py  hello.py
fastapi-demo/fastapi_demo/dependencies/kink_demo/: app.py  bootstrap.py  demo.py
fastapi-demo/fastapi_demo/dependencies/single_container/: Runner.py  factory_demo.py
fastapi-demo/fastapi_demo/forecast/: forecaster.py
fastapi-demo/fastapi_demo/io/: read_s3.py  s3.py
fastapi-demo/fastapi_demo/resources/model/: haystack_wind_generation_prediction_15mins_feature_names.json  haystack_wind_spreadout_15mins_20231001-20240731_history.csv  haystack_wind_spreadout_15mins_20240701-20240731_weather_api_history.csv
machine-learning/: pyproject.toml
machine-learning/jupyter/101/: hello-pandas.ipynb
machine-learning/machine_learning/jupyter/book/ch01/: classification-demo.ipynb
machine-learning/machine_learning/jupyter/book/ch02/: Hello.ipynb  decision_tree.ipynb  linear_models.ipynb  nb_classifier.ipynb  neural_network.ipynb  random_forest.ipynb  svm.ipynb
machine-learning/math/jupyter/: curves.ipynb
mlflow-proj/: pyproject.toml
mlflow-proj/mlruns/0/: meta.yaml
mysite/mysite/: settings.py
mysite/polls/: models.py  views.py
mysite/polls/migrations/: 0001_initial.py
poetry_demo/: Dockerfile  README.md  pyproject.toml
poetry_demo/cicd/: Dockerfile  install-poetry.py
poetry_demo/poetry_demo/com/cn/data/: Car.py  Student.py
poetry_demo/poetry_demo/com/cn/tao/: HelloWorld.py  ScoreDisplay.py
poetry_demo/tests/: test_HelloWorld.py
