[tool.poetry]
name = "ai"
version = "0.1.0"
description = ""
authors = ["Tao Xiao"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = {extras = ["openai"], version = "^0.3.21"}
langchain-chroma = "^0.2.2"
langchain-community = "^0.3.20"
sentence-transformers = "^4.0.1"
langchain-huggingface = "^0.1.2"
langchain-google-genai = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
