[tool.poetry]
name = "fastapi-demo"
version = "0.1.0"
description = ""
authors = ["Tao Xiao"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.112.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
