[tool.poetry]
name = "fastapi-demo"
version = "0.1.0"
description = ""
authors = ["Tao Xiao"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.112.2"}
numpy = "^2.1.0"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
joblib = "^1.4.2"
pvlib = "^0.11.0"
scikit-learn = "^1.5.1"
boto3 = "^1.35.9"
dependency-injector = "^4.42.0"
kink = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
