[tool.poetry]
name = "machine-learning"
version = "0.1.0"
description = ""
authors = ["Tao Xiao"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^2.1.0"
mglearn = "^0.2.0"
graphviz = "^0.20.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
