[tool.poetry]
name = "mlflow-proj"
version = "0.1.0"
description = ""
authors = ["Tao Xiao"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
keras = "^3.7.0"
hyperopt = "^0.2.7"
tensorflow = "^2.18.0"
mysqlclient = "^2.2.6"
mysql-connector-python = "^9.1.0"
mlflow = "2.16.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
